Bug 1500520 - Always check graphics reset status in RenderThread::UpdateAndRender() r=nical